--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tween-functions": "^1.2.0"
   },
   "devDependencies": {
+    "@types/hoist-non-react-statics": "^3.3.5",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-beautiful-dnd": "^13.0.0",
